@@ -30,7 +30,9 @@
 			    {$message.subject|escape}
 		</td>
 		<td width="1%">
+			{if get_conf('userpanel.allow_message_add_to_closed_tickets')}
 			<a href="?m=helpdesk&op=message&id={$ticket.id}&msgid={$message.id}">{trans("Reply")}</a>
+			{else}&nbsp;{/if}
 		</td>
 	</tr>
 	<tr>
