@@ -47,6 +47,7 @@ version ?.??.?? (????-??-??):
   - messages: selection of customer tariff type is possible [chilan]
   - support customer search by tariff type [chilan]
   - customer search: export results to csv [chilan]
+  - userpanel: helpdesk: allow message add to closed tickets setting [chilan]
 
 version 1.11.14 (2013-03-25):
 
